tests/baselines/reference/enumIdenticalIdentifierValues.errors.txt
==== tests/cases/compiler/enumIdenticalIdentifierValues.ts (1 errors) ====
    enum Enum {
        1,
        1.0
        ~~~
!!! enumIdenticalIdentifierValues.ts(3,5): error TS2000: Duplicate identifier '1.0'. Additional locations:
!!! 	enumIdenticalIdentifierValues.ts(2,5)
    }